--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@ h4 {
   width: 100%;
   height: 36px;
   transition: .2s background-color ease-in;
+  transition: .02s flex-basis ease-in;
   /* border-bottom: 2px solid #f2f2f2; */
   display: flex;
   flex-direction: column;
@@ -107,7 +108,7 @@ h4 {
 .todo-progress {
   display: flex;
   height: 2px;
-  background-color: #223855;
+  background-color: gray;
 }
 .todo-progress-done {}
 
