--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ h4 {
   /* border-bottom: 2px solid #f2f2f2; */
   display: flex;
   flex-direction: column;
+  margin-bottom: 12px 
 }
 
 .pill:hover {
