--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  background-image: './assets/bg.png'
 }
