--- a/src/App.css
+++ b/src/App.css
@@ -57,35 +57,40 @@ h4 {
   line-height: 48px;
 }
 
-.pill {
+.todo {
+  padding: 0 24px;
+}
+
+.todo-item {
   background: #ffffff;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.48);
   border-radius: 6px;
   overflow: hidden;
   color: #4a4a4a;
   line-height: 36px;
-  outline: none;
-  border: none;
-  /* padding: 0 12px; */
-  width: 100%;
   height: 36px;
   transition: .2s background-color ease-in;
   transition: .02s flex-basis ease-in;
   /* border-bottom: 2px solid #f2f2f2; */
   display: flex;
   flex-direction: column;
-  margin-bottom: 12px 
+  font-size: 14px;
+  margin-bottom: 12px;
 }
 
-.pill:hover {
+.todo-item:last-of-type {
+  margin-bottom: 0;
+}
+
+.todo-item:hover {
   background-color: #e8f1fd;
 }
 
-.todo {
+.todo-item-content {
   cursor: pointer;
   display: flex;
-  align-items: center;
   margin: 0 12px;
+  align-items: center;
 }
 
 .todo-toggle {
@@ -111,10 +116,15 @@ h4 {
   height: 2px;
   background-color: gray;
 }
-.todo-progress-done {}
+.todo-progress-done {
+}
 
 .todo-label {
   flex: 1;
+}
+
+.todo-add {
+  margin-bottom: 12px;
 }
 
 label {
