clone element to add initialize timer

--- a/src/App.css
+++ b/src/App.css
@@ -62,15 +62,16 @@ h4 {
 }
 
 .todo-item {
-  background: #ffffff;
+  background: #fff;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.48);
   border-radius: 6px;
-  overflow: hidden;
+  /* overflow: hidden; */
   color: #4a4a4a;
   line-height: 36px;
-  height: 36px;
-  transition: .2s background-color ease-in;
-  transition: .02s flex-basis ease-in;
+  /* height: 36px; */
+  cursor: pointer;
+  transition: 0.2s background-color ease-in;
+  transition: 0.02s flex-basis ease-in;
   /* border-bottom: 2px solid #f2f2f2; */
   display: flex;
   flex-direction: column;
@@ -151,6 +152,6 @@ a:hover {
   font-weight: bold;
 }
 
-.completed{
-  color:red
+.completed {
+  color: red;
 }
